// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Circle should match default snapshot 1`] = `
@keyframes animation-0 {
  0%, 39%, 100% {
    opacity: 0;
  }

  40% {
    opacity: 1;
  }
}

.emotion-0 {
  width: 100%;
  height: 100%;
  position: absolute;
  left: 0;
  top: 0;
}

0 .emotion-0:before {
  content: '';
  display: block;
  margin: 0 auto;
  width: 15%;
  height: 15%;
  background-color: #999;
  border-radius: 100%;
  -webkit-animation: animation-0 1.2s infinite ease-in-out both;
  animation: animation-0 1.2s infinite ease-in-out both;
}

<div
  class="emotion-0 emotion-1"
/>
`;

exports[`Circle should match snapshot with rotate & delay 1`] = `
@keyframes animation-0 {
  0%, 39%, 100% {
    opacity: 0;
  }

  40% {
    opacity: 1;
  }
}

@keyframes animation-0 {
  0%, 39%, 100% {
    opacity: 0;
  }

  40% {
    opacity: 1;
  }
}

@keyframes animation-0 {
  0%, 39%, 100% {
    opacity: 0;
  }

  40% {
    opacity: 1;
  }
}

.emotion-0 {
  width: 100%;
  height: 100%;
  position: absolute;
  left: 0;
  top: 0;
  -webkit-transform: rotate(10deg);
  -ms-transform: rotate(10deg);
  -webkit-transform: rotate(10deg);
  -ms-transform: rotate(10deg);
  transform: rotate(10deg);
}

.emotion-0:before {
  content: '';
  display: block;
  margin: 0 auto;
  width: 15%;
  height: 15%;
  background-color: #999;
  border-radius: 100%;
  -webkit-animation: animation-0 1.2s infinite ease-in-out both;
  animation: animation-0 1.2s infinite ease-in-out both;
  -webkit-animation-delay: 100s;
  -webkit-animation-delay: 100s;
  animation-delay: 100s;
}

<div
  class="emotion-0 emotion-1"
/>
`;

exports[`Circle should match snapshot with rotate 1`] = `
@keyframes animation-0 {
  0%, 39%, 100% {
    opacity: 0;
  }

  40% {
    opacity: 1;
  }
}

@keyframes animation-0 {
  0%, 39%, 100% {
    opacity: 0;
  }

  40% {
    opacity: 1;
  }
}

.emotion-0 {
  width: 100%;
  height: 100%;
  position: absolute;
  left: 0;
  top: 0;
  -webkit-transform: rotate(10deg);
  -ms-transform: rotate(10deg);
  -webkit-transform: rotate(10deg);
  -ms-transform: rotate(10deg);
  transform: rotate(10deg);
}

.emotion-0:before {
  content: '';
  display: block;
  margin: 0 auto;
  width: 15%;
  height: 15%;
  background-color: #999;
  border-radius: 100%;
  -webkit-animation: animation-0 1.2s infinite ease-in-out both;
  animation: animation-0 1.2s infinite ease-in-out both;
}

<div
  class="emotion-0 emotion-1"
/>
`;
